--- a/manageshow-server/build.gradle
+++ b/manageshow-server/build.gradle
@@ -17,6 +17,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'ch.qos.logback:logback-classic:1.4.7'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
