--- a/manageshow-client/build.gradle
+++ b/manageshow-client/build.gradle
@@ -1,9 +1,11 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.2'
-    id 'io.spring.dependency-management' version '1.1.2'
+    id 'application'
 }
-
+application {
+    // Define the main class for the application.
+    mainClass.set("com.demo.manageshow.ManageShowClientApp")
+}
 group = 'com.demo'
 version = '0.0.1-SNAPSHOT'
 
@@ -16,8 +18,11 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework:spring-context:6.0.11'
+    implementation 'org.springframework:spring-web:6.0.11'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+    implementation "ch.qos.logback:logback-classic:1.4.7"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.9.1"
 }
 
 tasks.named('test') {
